PyMaker/datas/object2/RawHTML/i19201/Python_DOC_referPages.gentoo-dropbox-cli.txt
<div class="post-text" itemprop="text">
<p>Trying to use the python script to manage my dropbox via the command line and when I try to run it I get the following</p>
<pre><code>-&gt; ~/bin/dropbox.py help     
  File "/home/jcostanzo/bin/dropbox.py", line 50
    INFO = u"Dropbox is the easiest way to share and store your files online. Want to learn more? Head to"
                                                                                                         ^
SyntaxError: invalid syntax
</code></pre>
<p>Here is my python version</p>
<pre><code>-&gt; python --version
Python 3.2.3
</code></pre>
<p>What am I missing? Thanks</p>
</div>
<div class="post-text" itemprop="text">
<p>Looks like this script doesn't work in your version of Python.</p>
<p>The u'unicode' syntax works in Python 2.x, and again in Python 3.3.</p>
<p>See also <a href="https://stackoverflow.com/q/6625782/2153784">Unicode literals that work in python 3 and 2</a>
and <a href="http://docs.python.org/3/whatsnew/3.3.html" rel="nofollow noreferrer">What’s New In Python 3.3</a>.</p>
</div>
<span class="comment-copy">I will look to see how Gentoo and python 3.3 work. Thanks</span>
<span class="comment-copy">Just eselect python set 1 which set me back to python 2.7</span>
